# maat

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: OS.rs
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/maat_core/: core_manager.h  layout_tree.h  maat_mediator.h
src/core/src/: core_manager.cpp  maat_mediator.cpp
src/platform/interface/: CMakeLists.txt
src/platform/interface/include/maat_platform/: monitor.h  platform_manager.h  platform_types.h  window.h
src/platform/windows/: CMakeLists.txt
src/platform/windows/include/maat_platform_windows/: windows_monitor.h  windows_platform_manager.h  windows_window.h
src/platform/windows/src/: windows_monitor.cpp  windows_platform_manager.cpp  windows_window.cpp
